# aiogram3-project-template

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_10_0050-a5de5405485e_init.py
src/: main.py
src/core/: db.py  settings.py  unitofwork.py
src/handlers/: __init__.py
src/handlers/user/: __init__.py  start.py
src/middlewares/: __init__.py  registration_middleware.py  service_middleware.py
src/models/: base.py  user.py
src/repository/: __init__.py  repository.py  user_repository.py
src/services/: service.py  user_service.py
