[tool.poetry]
name = "aiogram3-project-template"
version = "0.1.0"
description = ""
authors = ["medlcago"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.11.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
